implement post continuation API
